change 2.0 by qingfan

--- a/static/sass/page/essay_list.scss
+++ b/static/sass/page/essay_list.scss
@@ -1,8 +1,8 @@
 @import '../common/global-set';
 .outer{
 	width:100%;
-	margin-top:18px;
-	border-top: solid 9px #54BEB2;
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
 	color:black;
 }
 .global_center{
@@ -11,8 +11,8 @@
 }
 .vertical_line{
 	margin-left:43px;
-	border-left:solid 8px #54BEB2;
-	border-right:solid 8px #54BEB2;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
 	width:82px;
 	height:36px;
 }
@@ -23,7 +23,7 @@
 	font-size:22px;
 	text-align:center;
 	font-weight:500;
-	background-color:#54BEB2;
+	background-color:#54bfbc;
 	color:white;
 	float:left;
 	margin-bottom:60px;
