--- a/static/css/common/header.css
+++ b/static/css/common/header.css
@@ -54,7 +54,8 @@
             width: 180px;
             height: 30px;
             line-height: 30px;
-            margin: 15px 0 0 10px; }
+            margin-top: 15px;
+            text-align: center; }
 
 .common_header_search {
   width: 100%;
