--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -20,26 +20,35 @@ a {
 body {
   background-color: #ddece7; }
 
+.content {
+  width: 100%;
+  height: auto; }
+
 .carousel {
   margin-top: 18px;
   width: 100%;
   height: 500px;
   position: relative;
   overflow: hidden; }
-  .carousel img {
-    display: block;
-    width: 1366px;
+  .carousel ul {
     height: 490px;
-    display: none; }
-    .carousel img:first-child {
-      display: block; }
+    overflow: hidden; }
+    .carousel ul li {
+      width: 1366px;
+      height: 490px;
+      float: left; }
+      .carousel ul li img {
+        display: block;
+        width: 1366px;
+        height: 490px; }
 
 .circles {
   width: 200px;
   height: 50px;
   position: absolute;
   right: 10px;
-  top: 500px; }
+  top: 500px;
+  z-index: 2; }
   .circles ul {
     width: 160px;
     height: 50px; }
@@ -55,11 +64,22 @@ body {
       background-color: #ffffff;
       border: 1px solid #ffffff; }
 
+.carousel_screen {
+  width: 1366px;
+  height: 150px;
+  z-index: 1;
+  background-color: #222;
+  opacity: 0.5;
+  position: absolute;
+  top: 450px;
+  left: 0; }
+
 .display {
   margin-top: 30px;
   margin-bottom: 95px;
   width: 1340px;
-  height: 240px; }
+  height: 240px;
+  cursor: default; }
   .display ul {
     width: 100%;
     height: 240px; }
@@ -68,25 +88,21 @@ body {
       width: 280px;
       height: 240px;
       margin-left: 48px; }
-      .display ul li a {
-        display: block;
+      .display ul li .div {
         width: 280px;
-        height: 240px; }
-        .display ul li a .div {
-          width: 280px;
-          height: 240px;
-          background-color: #f7f5f5;
-          box-shadow: 10px 10px 10px #c0c4c2; }
-          .display ul li a .div img {
-            padding: 11px 11px 0 11px; }
-          .display ul li a .div p {
-            padding: 11px 11px 11px 11px;
-            text-align: center;
-            font-size: 16px; }
-            .display ul li a .div p:first-child {
-              border-bottom: 1px dashed #288285; }
-            .display ul li a .div p:last-child {
-              text-align: right; }
+        height: 240px;
+        background-color: #f7f5f5;
+        box-shadow: 10px 10px 10px #c0c4c2; }
+        .display ul li .div img {
+          padding: 11px 11px 0 11px; }
+        .display ul li .div p {
+          padding: 11px 11px 11px 11px;
+          text-align: center;
+          font-size: 16px; }
+          .display ul li .div p:first-child {
+            border-bottom: 1px dashed #288285; }
+          .display ul li .div p:last-child {
+            text-align: right; }
 
 .news {
   width: 100%;
