--- a/static/css/page/news.css
+++ b/static/css/page/news.css
@@ -9,30 +9,30 @@ body, ul, a, .main, .main .news, .main .news .news_list .news_item .detail, .mai
     margin-top: 14px; }
     .main .top .solid {
       width: 100%;
-      height: 13px;
+      height: 9px;
       background-color: #54bfbc; }
     .main .top .solids {
       width: 100%;
-      height: 35px; }
+      height: 36px; }
       .main .top .solids .one {
-        width: 10px;
-        height: 35px;
+        width: 8px;
+        height: 36px;
         background-color: #54bfbc; }
       .main .top .solids #left {
         float: left;
-        margin-left: 195px; }
+        margin-left: 196.5px; }
       .main .top .solids #right {
-        margin-left: 270px; }
+        margin-left: 271px; }
     .main .top .board {
-      width: 160px;
-      height: 45px;
-      line-height: 45px;
+      width: 164px;
+      height: 47px;
+      line-height: 47px;
       background-color: #54bfbc;
-      color: #060606;
-      font-size: 24px;
+      color: #fff;
+      font-size: 22px;
       text-align: center;
       letter-spacing: 2px;
-      margin-left: 153px; }
+      margin-left: 153.5px; }
   .main .news {
     margin-top: 20px;
     width: 100%;
