--- a/static/sass/common/header.scss
+++ b/static/sass/common/header.scss
@@ -51,7 +51,8 @@ $logo-h:76px;
                width:180px;
                height:30px;
                line-height:30px;
-               margin:15px 0 0 10px;
+               margin-top:15px;
+               text-align:center;
             }
            }
        }
