--- a/static/sass/page/index.scss
+++ b/static/sass/page/index.scss
@@ -15,21 +15,32 @@ p,span,ul,li{
 	@extend %px;
 }
 
+.content{
+	width:100%;
+	height:auto;
+}
 .carousel{
 	margin-top:18px;
 	width:100%;
 	height:500px;
 	position:relative;
 	overflow:hidden;
-	img{
-		display:block;
-		width:1366px;
+	ul{
+		
 		height:490px;
-		display:none;
-		&:first-child{
-			display:block;
-		}
+		overflow:hidden;
+		li{
+			width:1366px;
+			height:490px;
+		    float:left;
+			img{
+				display:block;
+				width:1366px;
+				height:490px;
+		    }
+	    }
 	}
+	
 }
 
 .circles{
@@ -39,6 +50,7 @@ p,span,ul,li{
 		position:absolute;
 		right:10px;
 		top:500px;
+		z-index:2;
 		ul{
 			@extend %px;
 			width:160px;
@@ -59,6 +71,17 @@ p,span,ul,li{
 	    }
 
     }
+ //遮罩区
+.carousel_screen{
+	width:1366px;
+	height:150px;
+	z-index:1;
+	background-color:#222;
+	opacity:0.5;
+	position:absolute;
+	top:450px;
+	left:0;
+}
 
 //论文展示区
 .display{
@@ -67,6 +90,7 @@ p,span,ul,li{
 	margin-bottom:95px;
 	width:1340px;
 	height:240px;
+	cursor:default;
 	ul{
 		@extend %px;
 		width:100%;
@@ -76,31 +100,28 @@ p,span,ul,li{
 			width:280px;
 			height:240px;
 			margin-left:48px;
-			a{
-				display:block;
+			
+			.div{
 				width:280px;
 				height:240px;
-				.div{
-					width:280px;
-					height:240px;
-					background-color:#f7f5f5;
-					box-shadow:10px 10px 10px #c0c4c2;
-					img{
-						padding:11px 11px 0 11px;
-					}
-	                p{
-	                    padding:11px 11px 11px 11px;
-		                text-align:center;
-		                font-size:16px;
-		                &:first-child{
-		                   border-bottom:1px dashed #288285;
-		                }
-		                &:last-child{
-			                text-align:right;
-		                }
-	                }
+				background-color:#f7f5f5;
+				box-shadow:10px 10px 10px #c0c4c2;
+				img{
+					padding:11px 11px 0 11px;
 				}
-		    }
+                p{
+                    padding:11px 11px 11px 11px;
+	                text-align:center;
+	                font-size:16px;
+	                &:first-child{
+	                   border-bottom:1px dashed #288285;
+	                }
+	                &:last-child{
+		                text-align:right;
+	                }
+                }
+			}
+		
 			
 		}
 	}
