--- a/static/sass/page/news_Detail.scss
+++ b/static/sass/page/news_Detail.scss
@@ -16,37 +16,37 @@ body,ul,span{
 		margin-top:14px;
 		.solid{
 			width:100%;
-			height:13px;
+			height:9px;
 			background-color:#54bfbc;
 		}
 		.solids{
 			width:100%;
-			height:35px;
+			height:36px;
 			.one{
-				width:10px;
-				height:35px;
+				width:8px;
+				height:36px;
 				background-color:#54bfbc;
 			}
 			#left{
 				float:left;
-				margin-left:195px;
+				margin-left:196.5px;
 			}
 			#right{
-				margin-left:270px;
+				margin-left:271px;
 			}
 		}
 		.board{
-			width:160px;
-			height:45px;
-			line-height:45px;
+			width:164px;
+			height:47px;
+			line-height:47px;
 			background-color:#54bfbc;
-			color:#060606;
-			font-size:24px;
+			color:#fff;
+			font-size:22px;
 			text-align:center;
 			//font-weight:bold;
 			font-family:$family;
 			letter-spacing:2px;
-			margin-left:153px;
+			margin-left:153.5px;
 		}
 		.child_title{
 			color:#060606;
