--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -22,7 +22,8 @@ body {
 
 .content {
   width: 100%;
-  height: auto; }
+  height: auto;
+  ovweflow: hidden; }
 
 .carousel {
   margin-top: 18px;
@@ -65,7 +66,7 @@ body {
       border: 1px solid #ffffff; }
 
 .carousel_screen {
-  width: 1366px;
+  width: 100%;
   height: 150px;
   z-index: 1;
   background-color: #222;
