--- a/static/sass/page/index.scss
+++ b/static/sass/page/index.scss
@@ -18,6 +18,7 @@ p,span,ul,li{
 .content{
 	width:100%;
 	height:auto;
+	ovweflow:hidden;
 }
 .carousel{
 	margin-top:18px;
@@ -73,7 +74,7 @@ p,span,ul,li{
     }
  //遮罩区
 .carousel_screen{
-	width:1366px;
+	width:100%;
 	height:150px;
 	z-index:1;
 	background-color:#222;
