--- a/static/css/page/listGrads.css
+++ b/static/css/page/listGrads.css
@@ -136,4 +136,4 @@
 #content {
   height: 850px; }
 
-/*# sourceMappingURL=../maps/page/leader.css.map */
+/*# sourceMappingURL=../maps/page/listGrads.css.map */
