--- a/static/sass/page/listGrads.scss
+++ b/static/sass/page/listGrads.scss
@@ -1,8 +1,8 @@
 @import '../common/global-set';
 .outer{
 	width:100%;
-	margin-top:18px;
-	border-top: solid 9px #54BEB2;
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
 	color:black;
 }
 .global_center{
@@ -10,22 +10,23 @@
 	margin:0 auto;
 }
 .vertical_line{
-	margin-left:63px;
-	border-left:solid 8px #54BEB2;
-	border-right:solid 8px #54BEB2;
+	margin-left:43px;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
 	width:82px;
 	height:36px;
 }
 .list_text{
-	margin-left:20px;
 	width:164px;
 	height:47px;
 	line-height:47px;
 	font-size:22px;
 	text-align:center;
 	font-weight:500;
-	background-color:#54BEB2;
+	background-color:#54bfbc;
 	color:white;
+	float:left;
+	margin-bottom:60px;
 }
 .headpic{
 	padding-top:80px;
@@ -69,7 +70,7 @@
 .tag{
 	width:100%;
 	height:67px;
-	background-color:#54BEB2;
+	background-color:#54bfbc;
 	text-align:center;
 	clear:both;
 }
