--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -10,7 +10,7 @@
   *display: inline;
   *zoom: 1; }
 
-body, p, span, ul, li, .circles, .circles ul, .display, .display ul, .news, .news .news_list .news_item .detail {
+body, p, span, ul, li, img, .circles, .circles ul, .display, .display ul, .news, .news .c .news_list .news_item .detail {
   margin: 0;
   padding: 0; }
 
@@ -29,18 +29,17 @@ body {
   margin-top: 18px;
   width: 100%;
   height: 500px;
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   .carousel ul {
-    height: 490px;
-    overflow: hidden; }
+    width: 300%;
+    height: 490px; }
     .carousel ul li {
-      width: 1366px;
+      overflow: hidden;
       height: 490px;
       float: left; }
       .carousel ul li img {
         display: block;
-        width: 1366px;
+        width: 100%;
         height: 490px; }
 
 .circles {
@@ -78,7 +77,7 @@ body {
 .display {
   margin-top: 30px;
   margin-bottom: 95px;
-  width: 1340px;
+  width: 100%;
   height: 240px;
   cursor: default; }
   .display ul {
@@ -86,15 +85,18 @@ body {
     height: 240px; }
     .display ul li {
       float: left;
-      width: 280px;
+      width: 20%;
       height: 240px;
-      margin-left: 48px; }
+      margin-left: 4%; }
       .display ul li .div {
-        width: 280px;
-        height: 240px;
+        width: 100%;
+        height: 100%;
         background-color: #f7f5f5;
         box-shadow: 10px 10px 10px #c0c4c2; }
         .display ul li .div img {
+          display: block;
+          width: 100%;
+          height: 55%;
           padding: 11px 11px 0 11px; }
         .display ul li .div p {
           padding: 11px 11px 11px 11px;
@@ -109,9 +111,9 @@ body {
   width: 100%;
   height: auto; }
   .news p[class="title"] {
-    margin-left: 147px;
+    margin: 0 auto;
     background-color: #fdf8f8;
-    width: 1040px;
+    width: 76%;
     height: 53px;
     line-height: 53px; }
     .news p[class="title"] span {
@@ -123,50 +125,53 @@ body {
         margin-left: 15px;
         cursor: default; }
       .news p[class="title"] span:last-child {
-        margin-left: 700px;
+        margin-left: 60%;
         cursor: default; }
-  .news .news_list {
+  .news .c {
     width: 100%;
     height: auto;
     padding-bottom: 40px;
     background-color: #ffffff; }
-    .news .news_list .news_item {
-      width: 100%;
-      height: 170px; }
-      .news .news_list .news_item .img {
-        float: left;
-        margin: 33px 0 0 147px; }
-      .news .news_list .news_item .detail {
-        margin-left: 357px;
-        padding: 33px 0 0 0;
-        width: 830px;
-        height: 106px;
-        cursor: default; }
-        .news .news_list .news_item .detail .news_head {
-          width: 830px;
-          height: 30px;
-          line-height: 30px; }
-          .news .news_list .news_item .detail .news_head span[class="title"] {
-            width: 300px;
+    .news .c .news_list {
+      width: 76%;
+      height: auto;
+      margin: 0 auto; }
+      .news .c .news_list .news_item {
+        width: 100%;
+        height: 170px; }
+        .news .c .news_list .news_item .img {
+          float: left;
+          margin: 33px 0 0 0; }
+        .news .c .news_list .news_item .detail {
+          padding: 33px 0 0 200px;
+          width: 100%;
+          height: 106px;
+          cursor: default; }
+          .news .c .news_list .news_item .detail .news_head {
+            width: 100%;
             height: 30px;
-            margin-top: 0px;
-            float: left;
-            font-size: 22px;
-            color: #222; }
-          .news .news_list .news_item .detail .news_head span[class="date"] {
-            margin-left: 380px;
-            font-size: 16px;
-            color: #a4c3c4; }
-        .news .news_list .news_item .detail .news_detail {
-          color: #666;
-          font-size: 14px;
-          margin: 15px 0 5px 0; }
-        .news .news_list .news_item .detail .more a {
-          display: block;
-          width: 200px;
-          height: 50px;
-          font-size: 18px;
-          color: #222;
-          margin-left: 700px; }
+            line-height: 30px; }
+            .news .c .news_list .news_item .detail .news_head span[class="title"] {
+              width: 300px;
+              height: 30px;
+              margin-top: 0px;
+              float: left;
+              font-size: 22px;
+              color: #222; }
+            .news .c .news_list .news_item .detail .news_head span[class="date"] {
+              margin-left: 40%;
+              font-size: 16px;
+              color: #a4c3c4; }
+          .news .c .news_list .news_item .detail .news_detail {
+            color: #666;
+            font-size: 14px;
+            margin: 15px 0 5px 0; }
+          .news .c .news_list .news_item .detail .more a {
+            display: block;
+            width: 200px;
+            height: 50px;
+            font-size: 18px;
+            color: #222;
+            margin-left: 88%; }
 
 /*# sourceMappingURL=../maps/page/index.css.map */
