--- a/static/sass/common/footer.scss
+++ b/static/sass/common/footer.scss
@@ -19,7 +19,7 @@ $bg-color1:#7b8b91;
     height:76px;
     float:left;
     margin-top:40px;
-    margin-left:100px;
+    margin-left:10%;
   }
 }
 
@@ -29,7 +29,7 @@ $bg-color1:#7b8b91;
   background-color:$bg-color;
   .footer_list{
     padding-top:50px;
-    margin-left:600px;
+    margin-left:45%;
     width:700px;
     height:50px;
     li{
