--- a/static/css/common/footer.css
+++ b/static/css/common/footer.css
@@ -24,7 +24,7 @@
     height: 76px;
     float: left;
     margin-top: 40px;
-    margin-left: 100px; }
+    margin-left: 10%; }
 
 .common_footer_list {
   width: 100%;
@@ -32,7 +32,7 @@
   background-color: #497d92; }
   .common_footer_list .footer_list {
     padding-top: 50px;
-    margin-left: 600px;
+    margin-left: 45%;
     width: 700px;
     height: 50px; }
     .common_footer_list .footer_list li {
