--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -29,10 +29,12 @@ body {
   margin-top: 18px;
   width: 100%;
   height: 500px;
+  overflow: hidden;
   position: relative; }
   .carousel ul {
     width: 300%;
-    height: 490px; }
+    height: 490px;
+    overflow: hidden; }
     .carousel ul li {
       overflow: hidden;
       height: 490px;
