--- a/static/css/page/news_Detail.css
+++ b/static/css/page/news_Detail.css
@@ -1,110 +1,106 @@
-@charset "UTF-8";
-body, ul, span, .main, .main .content {
+body, ul, span, .content {
   margin: 0;
   padding: 0; }
 
-.main {
+.outer {
   width: 100%;
-  height: auto; }
-  .main .top {
-    margin-top: 14px; }
-    .main .top .solid {
-      width: 100%;
-      height: 9px;
-      background-color: #54bfbc; }
-    .main .top .solids {
-      width: 100%;
-      height: 36px; }
-      .main .top .solids .one {
-        width: 8px;
-        height: 36px;
-        background-color: #54bfbc; }
-      .main .top .solids #left {
-        float: left;
-        margin-left: 196.5px; }
-      .main .top .solids #right {
-        margin-left: 271px; }
-    .main .top .board {
-      width: 164px;
-      height: 47px;
-      line-height: 47px;
-      background-color: #54bfbc;
-      color: #fff;
-      font-size: 22px;
-      text-align: center;
-      font-family: "微软雅黑";
-      letter-spacing: 2px;
-      margin-left: 153.5px; }
-    .main .top .child_title {
-      color: #060606;
-      font-size: 24px;
-      position: absolute;
-      top: 165px;
-      left: 350px; }
-  .main .content {
+  margin-top: 14px;
+  border-top: solid 9px #54bfbc;
+  color: black; }
+
+.global_center {
+  width: 1042px;
+  margin: 0 auto; }
+
+.vertical_line {
+  margin-left: 43px;
+  border-left: solid 8px #54bfbc;
+  border-right: solid 8px #54bfbc;
+  width: 82px;
+  height: 36px; }
+
+.list_text {
+  width: 164px;
+  height: 47px;
+  line-height: 47px;
+  font-size: 22px;
+  text-align: center;
+  font-weight: 500;
+  background-color: #54BEB2;
+  color: white; }
+
+.content {
+  width: 1042px;
+  height: 1020px;
+  margin: 0 auto; }
+  .content .news_title {
+    margin-top: 34px;
     width: 1042px;
-    height: 1020px;
-    margin: 0 auto; }
-    .main .content .news_title {
-      margin-top: 34px;
+    height: 108px; }
+    .content .news_title p:first-child {
       width: 1042px;
-      height: 108px; }
-      .main .content .news_title p:first-child {
-        width: 1042px;
-        height: 58px;
-        line-height: 58px;
-        background-color: #497d92; }
-        .main .content .news_title p:first-child span:first-child {
-          color: #e0e2e5;
-          font-size: 20px;
-          display: inline;
-          margin-left: 45px; }
-        .main .content .news_title p:first-child span:last-child {
-          color: #f5f1f2;
-          font-size: 28px;
-          display: inline;
-          margin-left: 330px; }
-      .main .content .news_title p:last-child {
-        width: 1042px;
-        height: 40px;
-        line-height: 40px;
-        text-align: center;
-        color: #555;
-        font-size: 14px; }
-        .main .content .news_title p:last-child span {
-          display: inline; }
-          .main .content .news_title p:last-child span:first-child {
-            margin-right: 50px; }
-    .main .content .news_content {
-      width: 1040px;
-      height: 940px;
-      padding: 34px 0 30px 0;
-      color: #1e1e1e;
-      font-size: 18px; }
-  .main .footer {
-    width: 100%;
-    height: 65px;
-    margin: 0 0 30px 0; }
-    .main .footer p {
-      width: 100%;
-      height: 65px;
-      line-height: 65px;
-      background-color: #54bfbc; }
-      .main .footer p .text {
-        color: #060606;
+      height: 58px;
+      line-height: 58px;
+      background-color: #497d92; }
+      .content .news_title p:first-child span:first-child {
+        color: #e0e2e5;
         font-size: 20px;
-        letter-spacing: 1px; }
-      .main .footer p #font {
-        margin-left: 436px;
-        margin-right: 78px; }
-      .main .footer p #behind {
-        margin-left: 78px; }
-      .main .footer p .text-1 {
-        margin-left: 55px;
-        font-size: 12px; }
-      .main .footer p #at {
-        width: 40px;
-        height: 40px;
-        background-color: #fcf7f7; }
+        display: inline;
+        margin-left: 45px; }
+      .content .news_title p:first-child span:last-child {
+        color: #f5f1f2;
+        font-size: 28px;
+        display: inline;
+        margin-left: 330px; }
+    .content .news_title p:last-child {
+      width: 1042px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      color: #555;
+      font-size: 14px; }
+      .content .news_title p:last-child span {
+        display: inline; }
+        .content .news_title p:last-child span:first-child {
+          margin-right: 50px; }
+  .content .contentList {
+    width: 100%;
+    height: 90%; }
+    .content .contentList .news_content {
+      width: 100%;
+      height: 100%;
+      padding: 34px 0 30px 0; }
+      .content .contentList .news_content p {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        color: #1e1e1e;
+        font-size: 18px; }
+
+.footer {
+  width: 100%;
+  height: 65px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  background-color: #54bfbc; }
+  .footer p {
+    width: 40%;
+    height: 65px;
+    line-height: 65px;
+    margin: 0 auto;
+    cursor: default; }
+    .footer p .text {
+      font-size: 20px;
+      letter-spacing: 1px;
+      margin: 0 40px 0 40px; }
+    .footer p .text-1 {
+      margin-left: 55px;
+      font-size: 12px;
+      color: #060606; }
+    .footer p #at {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      background-color: #fcf7f7; }
 
 /*# sourceMappingURL=../maps/page/news_Detail.css.map */
