--- a/static/css/page/project.css
+++ b/static/css/page/project.css
@@ -1,97 +1,93 @@
-body, ul, span, .main, .main .content, .main .content .product, .main .content .product .title .text, .main .content .product .product_content, .main .content .product .product_content .item, .main .content .product .add a {
+body, ul, span, .content, .content .product, .content .product .title .text, .content .product .product_content, .content .product .product_content .item, .content .product .add a {
   margin: 0;
   padding: 0; }
 
-.main {
+.outer {
   width: 100%;
-  height: auto; }
-  .main .top {
-    margin-top: 14px; }
-    .main .top .solid {
-      width: 100%;
-      height: 9px;
-      background-color: #54bfbc; }
-    .main .top .solids {
-      width: 100%;
-      height: 36px; }
-      .main .top .solids .one {
-        width: 8px;
-        height: 36px;
-        background-color: #54bfbc; }
-      .main .top .solids #left {
-        float: left;
-        margin-left: 196.5px; }
-      .main .top .solids #right {
-        margin-left: 271px; }
-    .main .top .board {
-      width: 164px;
-      height: 47px;
-      line-height: 47px;
-      background-color: #54bfbc;
-      color: #fff;
-      font-size: 22px;
-      text-align: center;
-      letter-spacing: 2px;
-      margin-left: 153.5px; }
-  .main .content {
+  margin-top: 14px;
+  border-top: solid 9px #54bfbc;
+  color: black; }
+
+.global_center {
+  width: 1042px;
+  margin: 0 auto; }
+
+.vertical_line {
+  margin-left: 43px;
+  border-left: solid 8px #54bfbc;
+  border-right: solid 8px #54bfbc;
+  width: 82px;
+  height: 36px; }
+
+.list_text {
+  width: 164px;
+  height: 47px;
+  line-height: 47px;
+  font-size: 22px;
+  text-align: center;
+  font-weight: 500;
+  background-color: #54BEB2;
+  color: white; }
+
+.content {
+  width: 1042px;
+  height: 1182px;
+  padding: 40px 0 36px 0;
+  margin: 0 auto;
+  cursor: default; }
+  .content .product {
     width: 1042px;
-    height: 1182px;
-    padding: 40px 0 36px 0;
-    margin: 0 auto;
-    cursor: default; }
-    .main .content .product {
+    height: 554px;
+    padding-bottom: 25px; }
+    .content .product .title {
       width: 1042px;
-      height: 554px;
-      padding-bottom: 25px; }
-      .main .content .product .title {
+      height: 42px;
+      line-height: 42px; }
+      .content .product .title .text {
+        background-color: #497d92;
+        display: inline-block;
+        display: -moz-inline-block;
+        color: #fcf7f7;
+        font-size: 20px;
+        letter-spacing: 1px;
+        text-align: center;
+        padding-right: 1px;
+        height: 42px; }
+    .content .product .product_content {
+      width: 1042px;
+      height: 447px; }
+      .content .product .product_content .item {
         width: 1042px;
-        height: 42px;
-        line-height: 42px; }
-        .main .content .product .title .text {
-          background-color: #497d92;
+        height: 150px;
+        border-bottom: 6px solid #497d92; }
+        .content .product .product_content .item .h {
+          height: 144px;
           display: inline-block;
           display: -moz-inline-block;
-          color: #fcf7f7;
-          font-size: 20px;
-          letter-spacing: 1px;
           text-align: center;
-          padding-right: 1px;
-          height: 42px; }
-      .main .content .product .product_content {
-        width: 1042px;
-        height: 447px; }
-        .main .content .product .product_content .item {
-          width: 1042px;
-          height: 150px;
-          border-bottom: 6px solid #497d92; }
-          .main .content .product .product_content .item .h {
-            height: 144px;
-            display: inline-block;
-            display: -moz-inline-block;
-            text-align: center;
-            line-height: 144px; }
-          .main .content .product .product_content .item .item_1 {
-            color: #497d92;
-            font-weight: bold;
-            font-size: 14px; }
-          .main .content .product .product_content .item .item_2 {
-            color: #222;
-            font-size: 14px; }
-          .main .content .product .product_content .item .item_3 {
-            color: #040404;
-            font-size: 20px; }
-          .main .content .product .product_content .item .item_4 {
-            color: #b1cbcc;
-            font-size: 14px; }
-      .main .content .product .add a {
-        display: block;
-        width: 1042px;
-        height: 40px;
-        line-height: 40px;
-        color: #497d92;
-        font-size: 18px;
-        text-indent: 900px;
-        font-weight: bold; }
+          line-height: 144px; }
+        .content .product .product_content .item .item_1 {
+          color: #497d92;
+          font-weight: bold;
+          font-size: 14px; }
+        .content .product .product_content .item .item_2 {
+          color: #222;
+          font-size: 14px; }
+        .content .product .product_content .item .item_3 {
+          color: #040404;
+          font-size: 20px; }
+        .content .product .product_content .item .item_4 {
+          color: #b1cbcc;
+          font-size: 14px; }
+    .content .product .add a {
+      display: block;
+      width: 1042px;
+      height: 40px;
+      line-height: 40px;
+      color: #497d92;
+      font-size: 18px;
+      text-indent: 900px;
+      font-weight: bold; }
 
 .product_no {
   width: 160px; }
