--- a/static/sass/common/header.scss
+++ b/static/sass/common/header.scss
@@ -4,6 +4,7 @@ $bg-color: #ffffff;
 $bg-color1:#497d92;
 $logo-w:164px;
 $logo-h:76px;
+
 %px{
   margin:0;
   padding:0;
@@ -13,18 +14,46 @@ $logo-h:76px;
   height:94px;
   @extend %px;
   position:relative;
-  .icon_logo{
-    @extend %px;
-    width:164px;
-    height:76px;
-    position:absolute;
-    top:10px;
-    left:100px;
-    z-index:999;
+  margin:auto 0;
+  background-color:$bg-color;
+  .header_con{
+    width:100%;
+    .icon_logo{
+        @extend %px;
+        width:164px;
+        height:76px;
+        position:absolute;
+        top:10px;
+        left:10%;
+        z-index:999;
+      }
+      .common_header_search{
+        width:100%;
+        height:56px;
+        #header_search{
+          width:330px;
+          height:25px;
+          font-size:14px;
+          background-color:#e9e9e9;
+          border:1px solid #dad9d9; 
+          border-radius:5px;
+          position:relative;
+          margin-top:22px;
+          box-shadow:inset 4px 4px 4px #dad9d9;
+          margin-left:62%;
+          padding:2px 3px;
+        }
+        #icon_search{
+          width:33px;
+          height:25px;
+          margin-left:15px;
+        }
+     }
   }
+  
   .about{
     display:none;
-    width:1366px;
+    width:100%;
     height:385px;
     background-color:#ddece7;
     position:absolute;
@@ -59,41 +88,17 @@ $logo-h:76px;
     }
   }
 }
-
-.common_header_search{
-  width:100%;
-  height:56px;
-  background-color:$bg-color;
-  position:relative;
-  #header_search{
-    width:330px;
-    height:25px;
-    font-size:14px;
-    background-color:#e9e9e9;
-    border:1px solid #dad9d9; 
-    border-radius:5px;
-    position:absolute;
-    top:22px;
-    box-shadow:inset 4px 4px 4px #dad9d9;
-    left:740px;
-    padding:2px 3px;
-  }
-  #icon_search{
-    width:33px;
-    height:25px;
-    position:absolute;
-    top:22px;
-    left:1090px;
-  }
-}
-
 .common_header_nav{
   cursor:default;
   width:100%;
   height:38px;
+  position:relative;
   background-color:$bg-color1;
   .header_nav_list{
-      margin-left:650px;
+      position:absolute;
+      top:0;
+      left:55%;
+      
       width:570px;
       height:38px;
       font-size:16px;
