--- a/static/sass/page/index.scss
+++ b/static/sass/page/index.scss
@@ -24,11 +24,12 @@ p,span,ul,li,img{
 	margin-top:18px;
 	width:100%;
 	height:500px;
+	overflow:hidden;
 	position:relative;
 	ul{
         width:300%;
 		height:490px;
-
+        overflow:hidden;
 		li{
             overflow:hidden;
 		    height:490px;
