--- a/static/sass/page/news.scss
+++ b/static/sass/page/news.scss
@@ -7,53 +7,43 @@ body,ul,a{
 	@extend %px;
 }
 
-.main{
-	@extend %px;
+.outer{
 	width:100%;
-	height:auto;
-	.top{
-		margin-top:14px;
-		.solid{
-			width:100%;
-			height:9px;
-			background-color:#54bfbc;
-		}
-		.solids{
-			width:100%;
-			height:36px;
-			.one{
-				width:8px;
-				height:36px;
-				background-color:#54bfbc;
-			}
-			#left{
-				float:left;
-				margin-left:196.5px;
-			}
-			#right{
-				margin-left:271px;
-			}
-		}
-		.board{
-			width:164px;
-			height:47px;
-			line-height:47px;
-			background-color:#54bfbc;
-			color:#fff;
-			font-size:22px;
-			text-align:center;
-			//font-weight:bold;
-			letter-spacing:2px;
-			margin-left:153.5px;
-		}
-	}
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
+	color:black;
+}
+.global_center{
+	width:1042px;
+	margin:0 auto;
+}
+.vertical_line{
+	margin-left:43px;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
+	width:82px;
+	height:36px;
+}
+.list_text{
+	
+	width:164px;
+	height:47px;
+	line-height:47px;
+	font-size:22px;
+	text-align:center;
+	font-weight:500;
+	background-color:#54BEB2;
+	color:white;
+}
 	.news{
 	    @extend %px;
 	    margin-top:20px;
 	    width:100%;
 	    height:auto;
+	    margin:0 auto;
 	    .news_list{
-		    width:100%;
+		    width:1042px;
+		    margin:0 auto;
 		    height:auto;
 		    background-color:#ffffff;
 		    .news_item{
@@ -61,13 +51,13 @@ body,ul,a{
 			    height:170px;
 			    .img{
 				    float:left;
-                    margin:33px 0 0 153px;
+                    margin:33px 0 0 0;
 		        }
 			    .detail{
 			        @extend %px;
-				    margin-left:360px;
-				    padding:33px 0 0 0;
-				    width:830px;
+				    
+				    padding:33px 0 0 200px;
+				    width:100%;
 				    height:106px;
 				    cursor:default;
 				   .news_head{
@@ -112,7 +102,10 @@ body,ul,a{
 	    @extend %px;
 	    width:195px;
 	    height:67px;
-	    margin:40px 0 32px 590px;
+	    //margin:40px 0 32px 590px;
+	    margin:0 auto;
+	    line-height:67px;
+	    margin-bottom:32px;
         #add{
 	        width:195px;
 	        height:67px;
@@ -126,4 +119,3 @@ body,ul,a{
         }
          
     }
-}
