--- a/static/sass/page/news_Detail.scss
+++ b/static/sass/page/news_Detail.scss
@@ -8,54 +8,34 @@ body,ul,span{
 	@extend %px;
 }
 
-.main{
+.outer{
 	width:100%;
-	@extend %px;
-	height:auto;
-	.top{
-		margin-top:14px;
-		.solid{
-			width:100%;
-			height:9px;
-			background-color:#54bfbc;
-		}
-		.solids{
-			width:100%;
-			height:36px;
-			.one{
-				width:8px;
-				height:36px;
-				background-color:#54bfbc;
-			}
-			#left{
-				float:left;
-				margin-left:196.5px;
-			}
-			#right{
-				margin-left:271px;
-			}
-		}
-		.board{
-			width:164px;
-			height:47px;
-			line-height:47px;
-			background-color:#54bfbc;
-			color:#fff;
-			font-size:22px;
-			text-align:center;
-			//font-weight:bold;
-			font-family:$family;
-			letter-spacing:2px;
-			margin-left:153.5px;
-		}
-		.child_title{
-			color:#060606;
-			font-size:24px;
-			position:absolute;
-			top:165px;
-			left:350px;
-		}
-	}
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
+	color:black;
+}
+.global_center{
+	width:1042px;
+	margin:0 auto;
+}
+.vertical_line{
+	margin-left:43px;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
+	width:82px;
+	height:36px;
+}
+.list_text{
+	
+	width:164px;
+	height:47px;
+	line-height:47px;
+	font-size:22px;
+	text-align:center;
+	font-weight:500;
+	background-color:#54BEB2;
+	color:white;
+}
 	.content{ 
 		width:1042px;
 		height:1020px;
@@ -103,44 +83,59 @@ body,ul,span{
 				}
 			}
 		}
-		.news_content{
-			width:1040px;
-			height:940px;
-			padding:34px 0 30px 0;
-			color:#1e1e1e;
-			font-size:18px;
+		.contentList{
+			width:100%;
+			height:90%;
+			.news_content{
+				width:100%;
+				height:100%;
+				padding:34px 0 30px 0;
+				p{
+				    width:100%;
+				    height:100%;
+					overflow:hidden;
+					color:#1e1e1e;
+					font-size:18px;
+				}
+			}
 		}
+		
 	}
 	.footer{
 		width:100%;
 		height:65px;
-		margin:0 0 30px 0;
+		margin:0 auto;
+		margin-bottom:30px;
+		background-color:#54bfbc;
 		p{
-		    width:100%;
+		    width:40%;
 		    height:65px;
 		    line-height:65px;
-	        background-color:#54bfbc;
+	        margin:0 auto;
+	        cursor:default;
 			.text{
-				color:#060606;
+				
 				font-size:20px;
 				letter-spacing:1px;
+				margin: 0 40px 0 40px;
 			}
 			#font{
-				margin-left:436px;
-				margin-right:78px;
+				
 			}
 			#behind{
-				margin-left:78px;
+				
 			}
 			.text-1{
 				margin-left:55px;
 				font-size:12px;
+				color:#060606;
 			}
 			#at{
-				width:40px;
-				height:40px;
+			    display:inline-block;
+				width:30px;
+				
+				height:30px;
 				background-color:#fcf7f7;
 			}
 		}
 	}
-}
