--- a/static/sass/page/project.scss
+++ b/static/sass/page/project.scss
@@ -7,47 +7,34 @@ body,ul,span{
 	@extend %px;
 }
 
-.main{
+.outer{
 	width:100%;
-	@extend %px;
-	height:auto;
-	.top{
-		margin-top:14px;
-		.solid{
-			width:100%;
-			height:9px;
-			background-color:#54bfbc;
-		}
-		.solids{
-			width:100%;
-			height:36px;
-			.one{
-				width:8px;
-				height:36px;
-				background-color:#54bfbc;
-			}
-			#left{
-				float:left;
-				margin-left:196.5px;
-			}
-			#right{
-				margin-left:271px;
-			}
-		}
-		.board{
-			width:164px;
-			height:47px;
-			line-height:47px;
-			background-color:#54bfbc;
-			color:#fff;
-			font-size:22px;
-			text-align:center;
-			//font-weight:bold;
-			
-			letter-spacing:2px;
-			margin-left:153.5px;
-		}
-    }
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
+	color:black;
+}
+.global_center{
+	width:1042px;
+	margin:0 auto;
+}
+.vertical_line{
+	margin-left:43px;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
+	width:82px;
+	height:36px;
+}
+.list_text{
+	
+	width:164px;
+	height:47px;
+	line-height:47px;
+	font-size:22px;
+	text-align:center;
+	font-weight:500;
+	background-color:#54BEB2;
+	color:white;
+}
     .content{
 	    @extend %px;
 	    width:1042px;
@@ -128,7 +115,7 @@ body,ul,span{
 	        }
         }
     }
-}
+
 .product_no{
     width:160px; 
 }
