--- a/static/css/common/footer.css
+++ b/static/css/common/footer.css
@@ -33,7 +33,8 @@
   .common_footer_list .footer_list {
     padding-top: 50px;
     margin-left: 45%;
-    width: 700px;
+    margin-right: 0;
+    width: 50%;
     height: 50px; }
     .common_footer_list .footer_list li {
       float: left;
