--- a/static/css/common/header.css
+++ b/static/css/common/header.css
@@ -90,7 +90,7 @@
     position: absolute;
     top: 0;
     left: 55%;
-    width: 570px;
+    width: 45%;
     height: 38px;
     font-size: 16px; }
     .common_header_nav .header_nav_list a li {
