--- a/static/sass/common/footer.scss
+++ b/static/sass/common/footer.scss
@@ -30,7 +30,8 @@ $bg-color1:#7b8b91;
   .footer_list{
     padding-top:50px;
     margin-left:45%;
-    width:700px;
+    margin-right:0;
+    width:50%;
     height:50px;
     li{
       float:left;
