--- a/static/sass/common/header.scss
+++ b/static/sass/common/header.scss
@@ -97,9 +97,8 @@ $logo-h:76px;
   .header_nav_list{
       position:absolute;
       top:0;
-      left:55%;
-      
-      width:570px;
+      left:55%;      
+      width:45%;
       height:38px;
       font-size:16px;
       a{
