--- a/static/sass/page/news_Detail.scss
+++ b/static/sass/page/news_Detail.scss
@@ -38,7 +38,7 @@ body,ul,span{
 }
 	.content{ 
 		width:1042px;
-		height:1020px;
+		height:1005px;
 		@extend %px;
 		margin:0 auto;
 		.news_title{
@@ -90,9 +90,10 @@ body,ul,span{
 				width:100%;
 				height:100%;
 				padding:34px 0 30px 0;
-				p{
+				p{  
+				    padding:0 20px 0 20px;
 				    width:100%;
-				    height:100%;
+				    height:97%;
 					overflow:hidden;
 					color:#1e1e1e;
 					font-size:18px;
@@ -108,33 +109,30 @@ body,ul,span{
 		margin-bottom:30px;
 		background-color:#54bfbc;
 		p{
-		    width:40%;
+		    width:50%;
 		    height:65px;
 		    line-height:65px;
 	        margin:0 auto;
 	        cursor:default;
-			.text{
-				
+			.text{	
 				font-size:20px;
 				letter-spacing:1px;
 				margin: 0 40px 0 40px;
-			}
-			#font{
-				
-			}
-			#behind{
-				
 			}
 			.text-1{
 				margin-left:55px;
 				font-size:12px;
 				color:#060606;
 			}
-			#at{
+			.page{
 			    display:inline-block;
-				width:30px;
-				
-				height:30px;
+				width:20px;
+				height:28px;
+				line-height:28px;
+				margin:0 5px 0 5px;
+				border:0;
+				font-family:12px;
+                padding:1px 1px;
 				background-color:#fcf7f7;
 			}
 		}
