--- a/static/css/page/dissertation.css
+++ b/static/css/page/dissertation.css
@@ -78,10 +78,10 @@
   float: left; }
 
 #content_text {
-  text-overflow: ellipsis;
-  height: 690px;
-  font-size: 16px;
-  line-height: 28px;
+  overflow: hidden;
+  height: 520px;
+  font-size: 14px;
+  line-height: 20px;
   margin-top: 40px;
   width: 100%; }
 
