--- a/static/sass/common/header.scss
+++ b/static/sass/common/header.scss
@@ -71,6 +71,8 @@ $logo-h:76px;
            display:block;
            img{
              display:block;
+             width:150px;
+             height:105px;
            }
            .about_name{
                display:block;
