--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -127,7 +127,7 @@ body {
         margin-left: 15px;
         cursor: default; }
       .news p[class="title"] span:last-child {
-        margin-left: 50%;
+        margin-left: 60%;
         cursor: default; }
   .news .c {
     width: 100%;
@@ -141,8 +141,10 @@ body {
       .news .c .news_list .news_item {
         width: 100%;
         height: 170px; }
-        .news .c .news_list .news_item .img {
+        .news .c .news_list .news_item img {
           float: left;
+          width: 150px;
+          height: 106px;
           margin: 33px 0 0 0; }
         .news .c .news_list .news_item .detail {
           padding: 33px 0 0 200px;
@@ -161,7 +163,7 @@ body {
               font-size: 22px;
               color: #222; }
             .news .c .news_list .news_item .detail .news_head span[class="date"] {
-              margin-left: 20%;
+              margin-left: 33%;
               font-size: 16px;
               color: #a4c3c4; }
           .news .c .news_list .news_item .detail .news_detail {
