--- a/static/sass/page/index.scss
+++ b/static/sass/page/index.scss
@@ -148,7 +148,7 @@ p,span,ul,li,img{
 			    cursor:default;
 		    }
 	        &:last-child{
-		        margin-left:50%;
+		        margin-left:60%;
 		        cursor:default;
 	        }
         }
@@ -165,8 +165,10 @@ p,span,ul,li,img{
 			.news_item{
 		        width:100%;
 				height:170px;
-				.img{
+				img{
 					float:left;
+					width:150px;
+					height:106px;
 	                margin:33px 0 0 0;
 				}
 				.detail{
@@ -188,7 +190,7 @@ p,span,ul,li,img{
 						    color:#222;
 						}
 						span[class="date"]{
-						    margin-left:20%;
+						    margin-left:33%;
 							font-size:16px;
 							color:#a4c3c4;						
 						}
