--- a/static/css/page/dissertation.css
+++ b/static/css/page/dissertation.css
@@ -12,7 +12,7 @@
 
 .outer {
   width: 100%;
-  margin-top: 18px;
+  margin-top: 14px;
   border-top: solid 9px #54BEB2;
   color: black; }
 
@@ -34,9 +34,10 @@
   font-size: 22px;
   text-align: center;
   font-weight: 500;
-  background-color: #54BEB2;
+  background-color: #54bfbc;
   color: white;
-  float: left; }
+  float: left;
+  position: relative; }
 
 .list img {
   margin: 15px 15px 54px 15px;
@@ -65,11 +66,32 @@
   text-align: center;
   font-size: 22px;
   line-height: 58px;
-  width: 908px; }
+  width: 908px;
+  margin-top: 40px; }
+
+.list_text {
+  width: 164px;
+  height: 47px;
+  line-height: 47px;
+  font-size: 22px;
+  text-align: center;
+  font-weight: 500;
+  position: relative;
+  background-color: #54BEB2;
+  color: white; }
+  .list_text .child-title {
+    width: 200px;
+    height: 30px;
+    color: #666;
+    font-size: 20px;
+    line-height: 30px;
+    position: absolute;
+    top: 10px;
+    left: 150px; }
 
 .content {
   width: 1042px;
-  margin-top: 15px;
+  margin-top: 40px;
   overflow: hidden;
   margin-bottom: 30px; }
 
@@ -113,6 +135,7 @@
 
 .tag input {
   float: left;
+  border: 0;
   height: 24px;
   width: 25px;
   font-size: 20px;
