--- a/static/css/page/news_Detail.css
+++ b/static/css/page/news_Detail.css
@@ -26,13 +26,24 @@ body, ul, span, .content {
   font-size: 22px;
   text-align: center;
   font-weight: 500;
+  position: relative;
   background-color: #54BEB2;
   color: white; }
+  .list_text .child_title {
+    width: 200px;
+    height: 30px;
+    color: #666;
+    font-size: 20px;
+    line-height: 30px;
+    position: absolute;
+    top: 10px;
+    left: 150px; }
 
 .content {
   width: 1042px;
-  height: 1005px;
-  margin: 0 auto; }
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 40px; }
   .content .news_title {
     margin-top: 34px;
     width: 1042px;
@@ -100,12 +111,14 @@ body, ul, span, .content {
       margin-left: 55px;
       font-size: 12px;
       color: #060606; }
-    .footer p #behind a {
+    .footer p #behind {
       display: inline-block;
-      color: #060606; }
-    .footer p #font a {
+      color: white;
+      text-decoration: none; }
+    .footer p #font {
       display: inline-block;
-      color: #060606; }
+      color: white;
+      text-decoration: none; }
     .footer p a:hover {
       color: #060606; }
     .footer p .page {
