--- a/static/sass/page/essay_list.scss
+++ b/static/sass/page/essay_list.scss
@@ -1,6 +1,10 @@
 @import '../common/global-set';
+
+
 .outer{
 	width:100%;
+	maring:0;
+	padding:0;
 	margin-top:14px;
 	border-top: solid 9px #54bfbc;
 	color:black;
@@ -26,21 +30,31 @@
 	background-color:#54bfbc;
 	color:white;
 	float:left;
-	margin-bottom:60px;
+	margin-bottom:40px;
+	position:relative;
 }
+.child_title{
+            width:100px;
+            height:30px;
+            display:block;
+			color:#060606;
+			font-size:24px;
+			position:absolute;
+			
+		}
 .title{
 	clear:both;
 	background-color:#497D92;
 	width:100%;
-	height:45px;
+	height:42px;
 	color:white;
 	line-height:58px;
 	padding-left:44px;
 }
 .title div{
 		border-left:solid 2px white;
-		font-size:18px;
-		line-height:45px;
+		font-size:20px;
+		line-height:42px;
 		float:left;
 		text-align: center;
 }
@@ -55,45 +69,66 @@
 }
 #content li{
 	border-bottom:solid 6px #497D92;
-	height:140px;
+	height:145px;
+	width:100%;
+	cursor:default;
+	span{
+		display:inline-block;
+        display:-moz-inline-block;
+	}
 	.index{
+
 		line-height:140px;
-		margin-left:10px;
+		margin-left:20px;
 		color:#497D92;
 		font-size:20px;
 		float: left;
+		
 	}
 	.author{
-		margin-left: 50px;
+	    width:120px;
+		margin-left:13px;
 		font-size: 16px;
 		line-height:140px;
 		float:left;
+		text-align:center;
+		
 	}
 	.name{
+	    
 		color:#383838;
-		width:700px;
+		width:69%;
 		float:left;
-		font-size: 14px;
+		font-size: 10px;
 		font-weight:400;
-		margin: 20px 0 10px 60px;
 		line-height:18px;
-		#h1{
+		height:140px;
+		padding-left:5px;
+        text-align:left;
+		span{
+		    margin:0;
 			color:#497D92;
 			font-size:20px;
-			display: block;
+			display:block;
+			width:100%;
+			height:30%;
+			padding-top:10px;
+            cursor:pointer;
 		}
-		#h2{
+		.h2{
 			color:#497D92;
 			font-size:14px;
-			display: block;
 			margin-top:10px;
 		}
 	}
 	.time{
+	    
 		line-height:140px;
 		color:#497D92;
+		
 		float:right;
-		margin-right:20px;
+        width:158px;
+        
 	}
 }
 .load{
