--- a/static/sass/page/leader.scss
+++ b/static/sass/page/leader.scss
@@ -28,10 +28,14 @@
 	color:white;
 }
 .headpic{
-	padding-top:80px;
+	//padding-top:80px;
 	color:white;
 	width:240px;
 	height:313px;
+	img{
+		width:100%;
+		height:100%;
+	}
 	border:solid 10px #497D92;
 	float:left;
 	margin:80px 80px 60px 25px;
@@ -44,7 +48,7 @@
 	width:240px;
 	height:313px;
 	position:absolute;
-	margin-top:-90px;
+    margin-top:-303px;
 	margin-left:-10px;
 	display:none;
 	opacity:0.5;
@@ -55,16 +59,21 @@
 	margin-left:40px;
 	font-size:22px;
 	z-index:100;
+	margin-top:-200px;
 	position:absolute;
 }
 .info{
 	margin-left:40px;
-	margin-top:70px;
+	margin-top:-170px;
 	font-size:16px;
 	line-height:35px;
 	z-index:100;
 	width:180px;
 	position:absolute;
+}
+.profile{
+	display:none;
+	margin-top:-140px;
 }
 .tag{
 	width:100%;
@@ -120,9 +129,7 @@
 	line-height:60px;
 	padding-top:80px;
 }
-.profile{
-	display:none;
-}
+
 #content{
 	height:850px;
 }
