--- a/static/sass/page/onProject.scss
+++ b/static/sass/page/onProject.scss
@@ -7,150 +7,140 @@ body,ul,span{
 	@extend %px;
 }
 
-.main{
+.outer{
 	width:100%;
-	@extend %px;
-	height:auto;
-	.top{
-		margin-top:14px;
-		.solid{
-			width:100%;
-			height:9px;
-			background-color:#54bfbc;
-		}
-		.solids{
-			width:100%;
-			height:36px;
-			.one{
-				width:8px;
-				height:36px;
-				background-color:#54bfbc;
-			}
-			#left{
-				float:left;
-				margin-left:196.5px;
-			}
-			#right{
-				margin-left:271px;
-			}
-		}
-		.board{
-			width:164px;
-			height:47px;
-			line-height:47px;
-			background-color:#54bfbc;
-			color:#fff;
-			font-size:22px;
-			text-align:center;
-			//font-weight:bold;
-			
-			letter-spacing:2px;
-			margin-left:153.5px;
-		}
-		.child_title{
-			color:#060606;
-			font-size:24px;
-			position:absolute;
-			top:165px;
-			left:350px;
-		}
-    }
-    .content{
-	    @extend %px;
+	margin-top:14px;
+	border-top: solid 9px #54bfbc;
+	color:black;
+}
+.global_center{
+	width:1042px;
+	margin:0 auto;
+}
+.vertical_line{
+	margin-left:43px;
+	border-left:solid 8px #54bfbc;
+	border-right:solid 8px #54bfbc;
+	width:82px;
+	height:36px;
+}
+.list_text{
+	width:164px;
+	height:47px;
+	line-height:47px;
+	font-size:22px;
+	text-align:center;
+	font-weight:500;
+	position:relative;
+	background-color:#54BEB2;
+	color:white;
+	.child-title{
+	    width:200px;
+	    height:30px;
+	    color:#666;
+	    font-size:20px;
+	    line-height:30px;
+		position:absolute;
+	    top:10px;
+	    left:150px;
+	}
+}
+.content{
+    @extend %px;
+    width:1042px;
+    height:auto;
+    padding:40px 0 36px 0;
+    margin:0 auto;
+    cursor:default;
+    .product{
+        @extend %px;
 	    width:1042px;
-	    height:1000px;
-	    padding:40px 0 36px 0;
-	    margin:0 auto;
-	    cursor:default;
-	    .product{
-	        @extend %px;
+	    height:auto;
+	    padding-bottom:25px;
+	    .title{
 		    width:1042px;
-		    height:554px;
-		    padding-bottom:25px;
-		    .title{
-			    width:1042px;
-			    height:42px;
-			    line-height:42px;
-                .text{
-                    @extend %px;
-                    background-color:#497d92;
-                    display:inline-block;
-                    display:-moz-inline-block;
-	                color:#fcf7f7;
-	                font-size:20px;
-	                letter-spacing:1px;
-	                text-align:center;
-	                padding-right:1px;
-                    height:42px;
-                }    
-		    }
-		    .product_content{
-			    @extend %px;
-			    width:1042px;
-			    height:447px;
-			    .item{
-			        @extend %px;
-				    width:1042px;
-				    height:150px;
-				    border-bottom:6px solid #497d92;
-				    .h{
-					    height:144px;
-					    
-					    display:inline-block;
-                        display:-moz-inline-block;
-                        text-align:center;
-                        line-height:144px;
-                        span:inline-block;
-				    }
-				    .item_1{
-					    color:#497d92;
-					    font-weight:bold;
-					    font-size:14px;
-			        }
-			        .item_2{
-					    color:#222;
-					    font-size:14px;
-				    }
-				    .item_3{
-					    color:#040404;
-					    font-size:20px;
-				    }
-				    .item_4{
-					    color:#b1cbcc;
-					    font-size:14px;
-				    }		    
-			    }
-	        }
-	        .add{
-		        width:1042px;
-		        height:40px;
+		    height:42px;
+		    line-height:42px;
+            .text{
+                @extend %px;
+                background-color:#497d92;
+                display:inline-block;
+                display:-moz-inline-block;
+                color:#fcf7f7;
+                font-size:20px;
+                letter-spacing:1px;
+                text-align:center;
+                padding-right:1px;
+                height:42px;
+            }    
+	    }
+	    .product_content{
+		    @extend %px;
+		    width:1042px;
+		    height:auto;
+		    .item{
 		        @extend %px;
-		        line-height:40px;
-		        color:#497d92;
-		        font-size:18px;
-		        text-indent:910px;
-		        font-weight:bold;
-	        }
+			    width:1042px;
+			    height:150px;
+			    border-bottom:6px solid #497d92;
+			    .h{
+				    height:144px;
+				    
+				    display:inline-block;
+                    display:-moz-inline-block;
+                    text-align:center;
+                    line-height:144px;
+                    span:inline-block;
+			    }
+			    .item_1{
+				    color:#497d92;
+				    font-weight:bold;
+				    font-size:14px;
+		        }
+		        .item_2{
+				    color:#222;
+				    font-size:14px;
+			    }
+			    .item_3{
+				    color:#040404;
+				    font-size:20px;
+			    }
+			    .item_4{
+				    color:#b1cbcc;
+				    font-size:14px;
+			    }		    
+		    }
         }
-    }
-    .more{
-	    @extend %px;
-	    width:195px;
-	    height:67px;
-	    margin:40px 0 32px 590px;
-        .addMore{
-	        width:195px;
-	        height:67px;
-	        background-color:#54bfbc;
-	        border:0;
-	        color:#f9fafc;
-	        font-size:20px;
-	        letter-spacing:1px;
-	        text-shadow:2px 2px 2px #333;
-	        border-radius:5px;
+        .add{
+	        width:1042px;
+	        height:40px;
+	        @extend %px;
+	        line-height:40px;
+	        color:#497d92;
+	        font-size:18px;
+	        text-indent:910px;
+	        font-weight:bold;
         }
     }
 }
+.more{
+    @extend %px;
+    width:195px;
+    height:67px;
+    margin:40px 0 32px 590px;
+    .addMore{
+        width:195px;
+        height:67px;
+        background-color:#54bfbc;
+        border:0;
+        color:#f9fafc;
+        font-size:20px;
+        letter-spacing:1px;
+        text-shadow:2px 2px 2px #333;
+        border-radius:5px;
+    }
+}
+
 
 .product_no{
     width:160px;
