--- a/static/sass/common/footer.scss
+++ b/static/sass/common/footer.scss
@@ -35,10 +35,11 @@ $bg-color1:#7b8b91;
     height:50px;
     li{
       float:left;
-      width:200px;
+      width:150px;
       height:35px;
       line-height:35px;
       text-align:right;
+      margin-left:30px;
       img{
         margin-right:30px;
 
