--- a/static/css/page/index.css
+++ b/static/css/page/index.css
@@ -104,10 +104,10 @@ body {
           padding: 11px 11px 11px 11px;
           text-align: center;
           font-size: 16px; }
-          .display ul li .div p:first-child {
-            border-bottom: 1px dashed #288285; }
           .display ul li .div p:last-child {
             text-align: right; }
+        .display ul li .div .paper_title {
+          border-bottom: 1px dashed #288285; }
 
 .news {
   width: 100%;
