--- a/static/css/page/listGrads.css
+++ b/static/css/page/listGrads.css
@@ -110,7 +110,9 @@
   font-size: 20px;
   margin: 21px 17px 0 17px;
   padding-left: 5px;
-  line-height: 25px; }
+  line-height: 25px;
+  border: 0;
+  disabled: disabled; }
 
 .detial_info {
   display: none;
