--- a/static/sass/page/index.scss
+++ b/static/sass/page/index.scss
@@ -115,12 +115,13 @@ p,span,ul,li,img{
                     padding:11px 11px 11px 11px;
 	                text-align:center;
 	                font-size:16px;
-	                &:first-child{
-	                   border-bottom:1px dashed #288285;
-	                }
+	               
 	                &:last-child{
 		                text-align:right;
 	                }
+                }
+                .paper_title{
+	                border-bottom:1px dashed #288285;
                 }
 			}
 		
