--- a/static/sass/page/listGrads.scss
+++ b/static/sass/page/listGrads.scss
@@ -101,6 +101,8 @@
 	margin:21px 17px 0 17px;
 	padding-left:5px;
 	line-height:25px;
+	border:0;
+	disabled:disabled;
 }
 .detial_info{
 	display:none;
